# boostifymodel

./: .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build-desktop.yml
landing/: index.html  try.html
remotion/: package-lock.json  package.json
remotion/src/: EditEffect.tsx  HeroLoop.tsx  HeroPromo.tsx  MotionBackground.tsx  Root.tsx  TitleSequence.tsx  theme.ts
scripts/: deploy-humo.sh  download_demo_datasets.py  generate-landing-images.py  idle-autostop.sh  make-icon.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/humo/: serve_humo.py
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  audio.rs  dataset.rs  db.rs  edit_agent.rs  editor.rs  engine.rs  footage.rs  genai.rs  gpu_server.rs  humo.rs  lib.rs  main.rs  models.rs  mvgen.rs  pipeline.rs  premiere.rs  probe.rs  relight.rs  scanner.rs  session.rs  splitter.rs  system.rs  watch.rs
src/components/: Sidebar.tsx  StatCard.tsx  TopBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  collapsible.tsx  context-menu.tsx  controls.tsx  toast.tsx
src/lib/: api.ts  theme.ts  types.ts  utils.ts
src/pages/: Dashboard.tsx  Datasets.tsx  Editor.tsx  GpuServer.tsx  Library.tsx  Pipeline.tsx  Review.tsx  Settings.tsx  SmartSearch.tsx
