[package]
name = "boostify-dataset-studio"
version = "0.1.0"
description = "Boostify Dataset Studio — auto-build training datasets from music-video libraries"
authors = ["Boostify"]
edition = "2021"

[lib]
name = "boostify_dataset_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2"
notify = "6"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
once_cell = "1"
ureq = { version = "2", features = ["json", "tls"] }
base64 = "0.22"
dotenvy = "0.15"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
